--- a/Wep lommeregner/Wep lommeregner.csproj
+++ b/Wep lommeregner/Wep lommeregner.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MathParser.org-mXparser" Version="5.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
